--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                 <li class="lista"><a href="https://www.linkedin.com/in/allanlps/" class="lista-menu">Equipe</a></li>
                 <li class="lista"><a href="https://www.linkedin.com/in/allanlps/" class="lista-menu">Entrar</a></li>
             </ul>
-            <img src="../fylo/assets/img/logo.svg" alt="logotipo Zumbiido" class="menu-logo">
+            <img src="./assets/img/logo.svg" alt="logotipo Zumbiido" class="menu-logo">
         </div>
     </header>
     <section class="descricaoo">
-            <img src="../fylo/assets/img/illustration-1.svg" alt="ilustração de uma pasta sendo aberta por avatar" class="imagem-texto">
+            <img src="./assets/img/illustration-1.svg" alt="ilustração de uma pasta sendo aberta por avatar" class="imagem-texto">
 
         <div class="descricao__desktop">  
             <div class="descricao__texto">
@@ -44,12 +44,12 @@
         </div>
     </section>
 
-    <img src="../fylo/assets/img/bg-curve-mobile.svg" alt="borda mobile roxa" class="produtivo__imagem-borda">
+    <img src="./assets/img/bg-curve-mobile.svg" alt="borda mobile roxa" class="produtivo__imagem-borda">
 
     <section class="produtivo">
         <div class="produtivo__imagem">
            
-            <img src="../fylo/assets/img/illustration-2.svg" alt="ilustração bonecos avaliando gráficos" class="produtivo__imagem-ilustracao">
+            <img src="./assets/img/illustration-2.svg" alt="ilustração bonecos avaliando gráficos" class="produtivo__imagem-ilustracao">
 
         </div>
     <div class="produtivo__desktop">
