--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li class="lista"><a href="https://www.linkedin.com/in/allanlps/" class="lista-menu">Equipe</a></li>
                 <li class="lista"><a href="https://www.linkedin.com/in/allanlps/" class="lista-menu">Entrar</a></li>
             </ul>
-            <img src="./assets/img/logo.svg" alt="logotipo Zumbiido" class="menu-logo">
+            <img src=".Fylo/assets/assets/img/logo.svg" alt="logotipo Zumbiido" class="menu-logo">
         </div>
     </header>
     <section class="descricaoo">
